# open-data-ai-analytics

./: .gitignore  CHANGELOG.md  README.md  REPORT.md  docker-compose.yaml  pyproject.toml
.github/workflows/: python-tests.yaml  tests-coverage-check.yaml
src/: config.py  data_load.py  data_quality_analysis.py  data_research.py  data_visualization.py  utils.py
src/data_load/: Dockerfile  data_load.py
src/data_quality_analysis/: Dockerfile  data_quality_analysis.py
src/data_research/: Dockerfile  data_research.py
src/data_visualization/: Dockerfile  data_visualization.py  requirements.txt
src/web/: Dockerfile  app.py
tests/unit/: test_data_load.py  test_data_quality_analysis.py  test_data_research.py  test_data_visualization.py  test_utils.py
