[project]
name = "open-data-ai-analytics"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "pandas==3.0.2",
    "sqlalchemy==2.0.49",
]
[dependency-groups]
data_load = [
    "requests==2.31.0",
]
data_quality_analysis = []
data_research = []
data_visualization = [
    "matplotlib==3.8.0",
    "seaborn==0.13.0",
]
web = [
    "streamlit==1.56.0",
]
dev = [
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
python_files = "test_*.py"

